<?xml version="1.0" encoding="utf-8"?>

<!-- screen reached by clicking on an event
change toolbar title to "Event Details"
In the java code, check whether the user is joined in the waitlist already and if they are, change the title and colour of the join button to
 say "leave waitlist" and be red. otherwise, keep it the same.
 Also when the user clicks the join button and inputs their information it should change and the waitlist count displayed should be updated.
 Essentially its the same button that adds or removes form the waitlist depending on whether the user is already in the waitlist-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/waitlist_join_button"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/leave_waitlist_button"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
...
